# fips-flatbuffers

./: CMakeLists.txt  fips.yml
fips-files/: include.cmake
fips-files/generators/: FlatC.py
flatc/: CMakeLists.txt
tools/linux/: flatc
